# NativeActivity

./: .gitignore  LICENSE.md  README.md  build.gradle
src/main/: AndroidManifest.xml  CMakeLists.txt
src/main/cpp/: AndroidApp.cpp  AndroidApp.h  Application.cpp  Application.h  GraphicsDevice.cpp  GraphicsDevice.h  main.cpp
